# ToDoList

./: Appunti  CMakeLists.txt  CustomWindow.cpp  CustomWindow.h  DateSelectionDialog.cpp  DateSelectionDialog.h  Fixme  Priority.h  PrioritySelectionDialog.cpp  PrioritySelectionDialog.h  README.md  Task.cpp  Task.h  TaskList.cpp  TaskList.h  TaskListController.cpp  TaskListController.h  TaskListList.cpp  TaskListList.h  TaskListListController.cpp  TaskListListController.h  TaskListListView.cpp  TaskListListView.h  TaskListView.cpp  TaskListView.h  TaskView.cpp  TaskView.h  ToDoListApp.cpp  ToDoListApp.h  main.cpp
src/: CMakeLists.txt  Observer.cpp  Observer.h  Subject.cpp  Subject.h  ToDoApp.cpp  ToDoApp.h  main.cpp
src/Control/: Control.cpp  Control.h  ItemController.cpp  ItemController.h  ItemControllerObserver.h  ListController.cpp  ListController.h
src/Model/: Model.cpp  Model.h  Task.cpp  Task.h  TaskList.cpp  TaskList.h  ToDoItem.cpp  ToDoItem.h  ToDoList.cpp  ToDoList.h
src/View/: DateSelection.cpp  DateSelection.h  DateSelectionDialog.cpp  DateSelectionDialog.h  Frame.cpp  Frame.h  Priority.h  PrioritySelection.cpp  PrioritySelection.h  PrioritySelectionDialog.cpp  PrioritySelectionDialog.h  TaskEditDialog.cpp  TaskEditDialog.h  View.cpp  View.h
test/: CMakeLists.txt  MyTest.cpp  test_Frame.cpp  test_ToDoItem.cpp
test_e/: test_TaskList.cpp
tst/: test_TaskList.cpp
